2006-01-15  Phil Blundell  <pb@reciva.com>

	* Version 0.49 released.

2006-01-15  Phil Blundell  <pb@reciva.com>

	* progress.c (handle_progress_expose,
	handle_progress_size_allocate): New functions.
	(bt_progress_dialog): Set window as not decorated.  Set handlers
	for expose and size-allocate events.

2006-01-15  Phil Blundell  <pb@reciva.com>

	* main.c (bt_progress_dialog, bt_progress_dialog_update): Move
	to...
	* progress.c: ... here.  New file.
	* progress.h: New header.
	* Makefile.am (gpe_bluetooth_SOURCES): Add these new files.

2006-01-15  Phil Blundell  <pb@reciva.com>

	* main.c (sigchld_source_dispatch): New function.
	(sigchld_source_prepare): Likewise.
	(sigchld_source_check): Likewise.
	(main): Add GSource for SIGCHLD handler.

2006-01-14  Phil Blundell  <pb@reciva.com>

	* main.c (run_scan): Only set bd->sdp if service information was
	successfully retrieved.

	* configure.ac (DEP_MODULES): Require libcontactsdb 0.3.

	* obex-vcard.c (do_import_vcard): Open and close contacts database
	to ensure tables are created.

	* main.c (check_radio_startup): New function.
	(radio_on): Display progress dialog while radio is starting.
	(sigchld_handler): Destroy progress dialog if still displayed.

2005-12-31  Phil Blundell  <pb@reciva.com>

	* Version 0.48 released.

2005-12-31  Phil Blundell  <pb@reciva.com>

	* mkinstalldirs: New file.
	* Makefile.am (EXTRA_DIST): Distribute it.

2005-12-30  Florian Boor  <florian@kernelconcepts.de>

	* Makefile.am: Move chmod statements to install-data-hook due
	               to automake limitations.

2005-12-30  Phil Blundell  <pb@reciva.com>

	* Makefile.am (install-exec-hook): New.
	(bin_PROGRAMS): Remove bnep-helper, rfcomm-helper.
	