@@ -1,3 +1,8 @@
+2006-02-05  Phil Blundell  <pb@reciva.com>
+
+	* main.c (check_radio_startup): Set radio_is_on here.
+	(radio_on): But not here.
+
 2006-01-15  Phil Blundell  <pb@reciva.com>
 
 	* Version 0.49 released.
